[gd_scene load_steps=13 format=3 uid="uid://cxittwhcv7xg"]

[ext_resource type="Script" uid="uid://blfyr6mbm7vsb" path="res://Items/ItemSpawner/item_spawner.gd" id="1_v1wlb"]
[ext_resource type="Texture2D" uid="uid://cqmqg3uxqk7yh" path="res://Assets/Elbow Arrow.png" id="2_7gxwm"]
[ext_resource type="Texture2D" uid="uid://de2qt30lkg4in" path="res://Assets/icon.svg" id="2_yxxfw"]

[sub_resource type="Animation" id="Animation_7gxwm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("ItemPopup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yxxfw"]
resource_name = "fade_int"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("ItemPopup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.6, 0.90000004),
"transitions": PackedFloat32Array(0.120742105, 0.105111964),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_v1wlb"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("ItemPopup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.46666667, 1),
"transitions": PackedFloat32Array(0.17677678, 0.03124998),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7gxwm"]
_data = {
&"RESET": SubResource("Animation_7gxwm"),
&"fade_in": SubResource("Animation_yxxfw"),
&"fade_out": SubResource("Animation_v1wlb")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_7gxwm"]
radius = 451.03992

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7gxwm"]
bg_color = Color(0.14044744, 0.14044747, 0.14044738, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.14117648, 0.14117648, 0.14117648, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ac5vx"]
bg_color = Color(0.74558026, 0.7455802, 0.74558014, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1nx6r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7gxwm"]

[node name="ItemSpawner" type="Node2D" groups=["ItemSpawner"]]
script = ExtResource("1_v1wlb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7gxwm")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_7gxwm")

[node name="Line2D" type="Line2D" parent="."]
modulate = Color(1, 1, 1, 0)
points = PackedVector2Array(642, 69, 0, 0)
width = 6.0
default_color = Color(1, 1, 1, 0.5019608)

[node name="ItemPopup" type="Node2D" parent="."]
process_priority = 1
position = Vector2(4, -58)

[node name="PanelContainer" type="PanelContainer" parent="ItemPopup"]
offset_left = -175.0
offset_right = 176.0
offset_bottom = 126.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_7gxwm")

[node name="VBoxContainer" type="VBoxContainer" parent="ItemPopup/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ItemPopup/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="IconItem" type="TextureRect" parent="ItemPopup/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_yxxfw")
expand_mode = 5
stretch_mode = 5

[node name="DescriptionItem" type="RichTextLabel" parent="ItemPopup/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
bbcode_enabled = true
text = "[center]yayyy this is an item description"
fit_content = true

[node name="RichTextLabel" type="RichTextLabel" parent="ItemPopup/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_ac5vx")
bbcode_enabled = true
text = "[center]Press 'R' to switch which item to change"
fit_content = true

[node name="HBoxContainer2" type="HBoxContainer" parent="ItemPopup/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Panel" type="Panel" parent="ItemPopup/PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1nx6r")

[node name="Arrow1" type="TextureRect" parent="ItemPopup/PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("2_7gxwm")
expand_mode = 5
stretch_mode = 5

[node name="Item1" type="TextureButton" parent="ItemPopup/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
texture_normal = ExtResource("2_yxxfw")
ignore_texture_size = true
stretch_mode = 4

[node name="Item1Text" type="RichTextLabel" parent="ItemPopup/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "sample text in here"

[node name="Tooltips" type="HBoxContainer" parent="ItemPopup"]
offset_left = -111.0
offset_top = 157.0
offset_right = 111.0
offset_bottom = 197.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ItemPopup/Tooltips"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="SwapIcon" type="TextureRect" parent="ItemPopup/Tooltips/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_yxxfw")
expand_mode = 5
stretch_mode = 5

[node name="SwapText" type="RichTextLabel" parent="ItemPopup/Tooltips/HBoxContainer"]
custom_minimum_size = Vector2(45, 10)
layout_mode = 2
size_flags_vertical = 4
text = "Swap"
fit_content = true

[node name="Panel" type="Panel" parent="ItemPopup/Tooltips"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7gxwm")

[node name="HBoxContainer2" type="HBoxContainer" parent="ItemPopup/Tooltips"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="DeclineIcon" type="TextureRect" parent="ItemPopup/Tooltips/HBoxContainer2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_yxxfw")
expand_mode = 5
stretch_mode = 5

[node name="DeclineText" type="RichTextLabel" parent="ItemPopup/Tooltips/HBoxContainer2"]
custom_minimum_size = Vector2(60, 10)
layout_mode = 2
size_flags_vertical = 4
text = "Decline"
fit_content = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="ItemPopup/PanelContainer/VBoxContainer/HBoxContainer2/Item1" to="." method="_on_item_1_mouse_entered"]
